Interface changes, tables columns change

--- a/design/interface.ui
+++ b/design/interface.ui
@@ -137,7 +137,7 @@ font:77 10pt &quot;Arial Black&quot;;
 }
 
 QPushButton:hover {
-background-color: white;
+background-color: rgb(0,206,151);
 border-top-left-radius:20px;
 border-bottom-left-radius:20px;
 color: rgb(0,0,0);
@@ -334,12 +334,24 @@ font: 77 10pt &quot;Arial Black&quot;;
 }
 
 QTableWidget {
-background-color: rgb(255,255,255);
-color: rgb(0,0,0);
-grid-line color: rgb(0,206,151);
-font-size: 12pt;
-color: #000000;
-}</string>
+	background-color: rgb(61,61,61);
+	grid-line color: rgb(0,206,151);
+	font-size: 12pt;
+	color: black;
+}
+
+QHeaderView::section {
+	background-color: rgb(0,206,151);
+	border: 1px solid rgb(0,0,0);
+	font-size: 12pt;
+	color: black;
+}
+
+QTableWidget QTableCornerButton::section {
+	background-color: rgb(0,206,151);
+	border: 1px solid rgb(0,206,151);
+}
+</string>
             </property>
             <property name="frameShape">
              <enum>QFrame::StyledPanel</enum>
@@ -363,7 +375,7 @@ color: #000000;
                 </size>
                </property>
                <property name="currentIndex">
-                <number>0</number>
+                <number>2</number>
                </property>
                <widget class="QWidget" name="page_add">
                 <layout class="QVBoxLayout" name="verticalLayout_7">
@@ -574,11 +586,6 @@ color: #000000;
                      <string>END DATE</string>
                     </property>
                    </column>
-                   <column>
-                    <property name="text">
-                     <string>FINISHED</string>
-                    </property>
-                   </column>
                   </widget>
                  </item>
                  <item>
@@ -672,6 +679,9 @@ color: #000000;
                      <pointsize>12</pointsize>
                     </font>
                    </property>
+                   <property name="styleSheet">
+                    <string notr="true"/>
+                   </property>
                    <column>
                     <property name="text">
                      <string>NAME</string>
@@ -685,11 +695,6 @@ color: #000000;
                    <column>
                     <property name="text">
                      <string>END DATE</string>
-                    </property>
-                   </column>
-                   <column>
-                    <property name="text">
-                     <string>FINISHED</string>
                     </property>
                    </column>
                   </widget>
